# sfml-gameOne

./: CMakeLists.txt  README.md  run.bat
src/: Game.h  game_main.cc
src/component/: CCollision.h  CInput.h  CLifespan.h  CScore.h  CShape.h  CTransform.h
src/entities/: Entity.h  EntityManager.h
